--- a/Odc-client/build.xml
+++ b/Odc-client/build.xml
@@ -1,73 +1,63 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
-<project name="Odc-client" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Odc-client.</description>
-    <import file="nbproject/build-impl.xml"/>
-    <!--
+<project name="Odc-client" default="run" basedir=".">
+	<description>Tema 2 IDP</description>
+	<property name="src.dir" value="src"/>
+	<property name="build.dir" value="build"/>
+	<property name="lib.dir" value="lib"/>
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
+	<path id="classpath">
+		<fileset dir="${lib.dir}" casesensitive="yes">
+			<include name="*.jar"/>
+		</fileset>
+	</path>
 
-      -pre-init:                 called before initialization of project properties
-      -post-init:                called after initialization of project properties
-      -pre-compile:              called before javac compilation
-      -post-compile:             called after javac compilation
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-jar:                  called before JAR building
-      -post-jar:                 called after JAR building
-      -post-clean:               called after cleaning build products
+	<target name="build" description="Compile the source code." >
+		<mkdir dir="${build.dir}"/>
+		<!-- Compile the java code from ${src} into ${build} -->
+		<javac srcdir="${src.dir}" destdir="${build.dir}" includeantruntime="false">
+			<classpath refid="classpath"/>
+		</javac>
+	</target>
+	
+	<target name="clean" description="clean up" >
+	    <!-- Delete the ${build} and ${dist} directory trees -->
+	    <delete dir="${build.dir}"/> 
+	</target>
 
-    (Targets beginning with '-' are not intended to be called on their own.)
+ 	<target name="run" depends="build">
+ 		<parallel>
+ 			<!-- First user -->
+			<java fork="true" classname="main.Main">
+				<arg value="deidre"/>
+				<classpath>
+					<path refid="classpath"/>
+					<pathelement location="${build.dir}"/>
+				</classpath>
+			</java>
+ 			
+ 			<!-- Second user -->
+			<sequential>
+	 			<sleep seconds="2"/>
+				<java fork="true" classname="main.Main">
+					<arg value="chris"/>
+					<classpath> 
+						<path refid="classpath"/>
+						<pathelement location="${build.dir}"/>
+					</classpath>
+				</java>
+			</sequential>
+ 			
+ 			<!-- Third user -->
+			<sequential>
+	 			<sleep seconds="3"/>
+				<java fork="true" classname="main.Main">
+					<arg value="katy"/>
+					<classpath> 
+						<path refid="classpath"/>
+						<pathelement location="${build.dir}"/>
+					</classpath>
+				</java>
+			</sequential>
+ 		</parallel>
+	</target>
 
-    Example of inserting an obfuscator after compilation could look like this:
-
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
-
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
-
-
-    Another way to customize the build is by overriding existing main targets.
-    The targets of interest are: 
-
-      -init-macrodef-javac:     defines macro for javac compilation
-      -init-macrodef-junit:     defines macro for junit execution
-      -init-macrodef-debug:     defines macro for class debugging
-      -init-macrodef-java:      defines macro for class execution
-      -do-jar:                  JAR building
-      run:                      execution of project 
-      -javadoc-build:           Javadoc generation
-      test-report:              JUnit report generation
-
-    An example of overriding the target for project execution could look like this:
-
-        <target name="run" depends="Odc-client-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that the overridden target depends on the jar target and not only on 
-    the compile target as the regular run target does. Again, for a list of available 
-    properties which you can use, check the target you are overriding in the
-    nbproject/build-impl.xml file. 
-
-    -->
-</project>
+</project> 
