--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /Odc-client/nbproject/private/
 /Odc-client/build/
 /Odc-client/logs/
+/Odc-webservice/nbproject/private/
+/Odc-webservice/build/
+/Odc-webservice/logs/
